nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx

spec:
  selector:
    app: nginx

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
